docs/7.52/md/abennews-752-others.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 7.5x](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-75.htm) →  [Changes in Release 7.52](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-752.htm) → 

Further Changes in Release 7.52

[1\. Search in subtrees in the SAP GUI version of the ABAP keyword documentation](#!ABAP_MODIFICATION_1@1@)

[2\. Standard ABAP with restricted object use](#!ABAP_MODIFICATION_2@2@)

Modification 1

Search in Subtrees in the SAP GUI Version of the ABAP Keyword Documentation

In the documentation display of the SAP GUI version of the ABAP keyword documentation, the search for a search term can be restricted to the current subtree. This option can be selected from the context menu of a node or in the dialog window of the documentation.

Modification 2

Standard ABAP with Restricted Object Use

In Release 7.52, a new [ABAP version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_version_glosry.htm "Glossary Entry") [Standard ABAP with Restricted Object Use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstandard_abap_restr_obj_glosry.htm "Glossary Entry") was introduced. The internal version ID in column UCCHECK of system table TRDIR is "4".