docs/7.57/md/abennews-752-others.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-75.htm) →  [News for Release 7.52](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-752.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Further Changes in Release 7.52, ABENNEWS-752-OTHERS, 757%0D%0A%0D%0AError:%0D%0A%0D%
0A%0D%0A%0D%0ASuggestion for improvement:)

Further Changes in Release 7.52

[1\. Search in Subtrees in the SAP GUI Version of the ABAP Keyword Documentation](#!ABAP_MODIFICATION_1@1@)
[2\. Standard ABAP with restricted object use](#!ABAP_MODIFICATION_2@2@)

Modification 1   

Search in Subtrees in the SAP GUI Version of the ABAP Keyword Documentation

In the documentation display of the SAP GUI version of the ABAP keyword documentation, the search for a search term can be restricted to the current subtree. This option can be selected from the context menu of a node or in the dialog window of the documentation.

Modification 2   

Standard ABAP with restricted object use

In Release 7.52, a new [ABAP version](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_version_glosry.htm "Glossary Entry") [Standard ABAP with Restricted Object Use](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstandard_abap_restr_obj_glosry.htm "Glossary Entry") was introduced. The internal version ID in column UCCHECK of system table TRDIR is 4.